--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
   "scripts": {
     "test": "grunt test"
   },
-  "dependencies": {
-    "mongodb": "^1.4.6",
+  "devDependencies": {
+  	"mongodb": "^1.4.6",
     "mongoose": "^3.8.12",
     "grunt": "~0.4.3",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-jscs-checker": "~0.4.0",
     "webpagetest": "^0.2.4",
     "q": "^1.0.1"
-  },
-  "devDependencies": {}
+  }
 }
