--- a/json/config.json
+++ b/json/config.json
@@ -1,10 +1,27 @@
 {
-    "apiKey": "0c3414805f364eada89371220de2fc1c",
-    "serverUrl": "www.webpagetest.org",
-    "databaseUrl": "mongodb://localhost/speedTestResults",
-    "sites": {
-        "1": "www.legolandholidays.com",
-        "2": "www.chessingtonholidays.co.uk",
-        "3": "www.alton-towers-breaks.com"
-    }
+	"apiKey": "0c3414805f364eada89371220de2fc1c",
+	"serverUrl": "www.webpagetest.org",
+	"databaseUrl": "mongodb://localhost/speedTestResults",
+	"sites": {
+		"1" : "www.legolandholidays.com",
+		"2" : "www.chessingtonholidays.co.uk",
+		"3" : "www.alton-towers-breaks.com",
+		"4" : "www.paultonsbreaks.com",
+		"5" : "www.play-and-stay.com",
+		"6" : "www.thorpebreaks.com",
+		"7" : "www.show-and-stay.com",
+		"8" : "www.superbreak.com",
+		"9" : "www.booking.com",
+		"10" : "www.tickettree.com",
+		"11" : "www.westendtheatrebreaks.com",
+		"12" : "www.justlondontheatrebreaks.com",
+		"13" : "www.hoteldirect.co.uk",
+		"14" : "www.lastminute.com",
+		"15" : "www.legoland.co.uk",
+		"16" : "www.thorpepark.com",
+		"17" : "www.chessington.com",
+		"18" : "www.paultonspark.com",
+		"19" : "www.peppapigworld.co.uk",
+		"20" : "www.altontowers.com"
+	}
 }
