--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "grunt test"
   },
-  "devDependencies": {
+  "dependencies": {
     "mongodb": "^1.4.6",
     "mongoose": "^3.8.12",
     "grunt": "~0.4.3",
