--- a/json/config.json
+++ b/json/config.json
@@ -1,7 +1,7 @@
 {
-	"apiKey": "0c3414805f364eada89371220de2fc1c",
+	"apiKey": "",
 	"serverUrl": "www.webpagetest.org",
-	"databaseUrl": "mongodb://yellowbrickroad:yellowbrickroad@ds031978.mongolab.com:31978/webpagetest-db",
+	"databaseUrl": "mongodb://localhost/webpagetest-db",
 	"pollResults": 30,
 	"testRuns": 1,
 	"webPageTestOptions": {
@@ -10,25 +10,7 @@
 		"pageSpeed": true
 	},
 	"sites": {
-		"1" : "www.legolandholidays.com",
-		"2" : "www.lastminute.com",
-		"3" : "www.alton-towers-breaks.com",
-		"4" : "www.paultonsbreaks.com",
-		"5" : "www.play-and-stay.com",
-		"6" : "www.thorpebreaks.com",
-		"7" : "www.show-and-stay.com",
-		"8" : "www.superbreak.com",
-		"9" : "www.booking.com",
-		"10" : "www.tickettree.com",
-		"11" : "www.westendtheatrebreaks.com",
-		"12" : "www.justlondontheatrebreaks.com",
-		"13" : "www.hoteldirect.co.uk",
-		"14" : "www.chessingtonholidays.co.uk",
-		"15" : "www.legoland.co.uk",
-		"16" : "www.thorpepark.com",
-		"17" : "www.chessington.com",
-		"18" : "www.paultonspark.com",
-		"19" : "www.peppapigworld.co.uk",
-		"20" : "www.altontowers.com"
+		"1" : "www.siteone.com",
+		"2" : "www.sitetwo.com"
 	}
 }
